# OPENENV-PROJECT

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  benchmark_models.py  benchmark_report.json  client.py  demo.py  explain_policy.py  generate_dashboard.py  generate_pdf.py  generate_qa_pdf.py  generate_training_curves.py  gradio_demo.py  inference.py  openenv.yaml  push_to_hub.py  pyproject.toml  requirements.txt  test_env.py  test_integration.py  train_colab.ipynb  train_colab_small.ipynb  train_grpo.py  upload_hf.py  validate.py
benchmarks/: README.md
env/: citizens.py  curriculum.py  market_agent.py  openenv_wrapper.py  pydantic_models.py
graders/: graders.py
server/: app.py
